# AutoTetris

./: .gitignore  README.md  build.sh  gui.py  launch_settings.py  requirements.txt  settings.json  test.py  tetris.py
cpp/: .gitignore  CMakeLists.txt  Piece.cpp  Piece.hpp  State.cpp  State.hpp  Tetris.cpp  main.cpp
